maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:24: error: ';' expected but 'else' found.
  else {
  ^