maze.randommouse.RandomMouseMaze.scala.code
override def run() {

  while(!estSurBiscuit()) {
    
    randMove()
    
  }
  
  prendBiscuit()
  
}


def randMove() {
  
	while (!estFaceMur()) {
    
    var nbPas = random3()
    avance(nbPas)
    
  }
  
  else {
    
    droite()
    
    if (estFaceMur()) {
      
      gauche()
      gauche()
      
    }

	}
  
}
  